--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   app:
-    image: node
+    build:
+      context: .
     entrypoint:
     - /docker-compose-entry.sh
     ports:
