--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
 version: '3'
 services:
   app:
-    build:
-      context: .
-    entrypoint:
-    - /docker-compose-entry.sh
+    image: httpd:2.4
     ports:
-    - 9000:9000
+      - 8080:80
     volumes:
-    - "${PWD}:/app"
-    - "./docker-compose-entry.sh:/docker-compose-entry.sh"
+      - "${PWD}:/usr/local/apache2/htdocs/"
